--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,1 +1,23 @@
-// Import all of your scss files here
+* {
+  box-sizing: border-box;
+}
+
+body, html {
+  height: 100%;
+}
+
+li {
+  list-style: none;
+}
+
+.comments {
+  min-height: 150px;
+  background-color: red;
+  margin-bottom: 5px;
+  .comment-user {
+    float: left;
+    min-width: 200px;
+    min-height: 150px;
+    background-color: orange;
+  }
+}
