--- a/src/js/views/topics/show.html
+++ b/src/js/views/topics/show.html
@@ -1,16 +1,27 @@
-<div>
-  <h2>{{ topicsShow.topic.title }}</h2>
-  <h4>{{ topicsShow.topic.selected_subtitle }}</h4>
+<div class="row">
+  <div class="col-xs-6">
+    <h2>{{ topicsShow.topic.title }}</h2>
+    <h4>{{ topicsShow.topic.selected_subtitle }}</h4>
+  </div>
+  <div class="col-xs-6">
+    <form ng-submit="topicsShow.postSubtitle()">
+      <label for="subtitle">Make a subtitle suggestion</label><br>
+      <input type="text" name="subtitle" id="subtitile" ng-model="topicsShow.subtitle.title">
+      <button>Submit</button>
+    </form>
+  </div>
 </div>
 
 <ul>
   <li ng-repeat="comment in topicsShow.topic.comments">
     <div class="row comments">
-      <div class="col-xs-2">
-        {{ comment.user.username }}
-        <img ng-src="{{ comment.user.profile_pic_url }}" ng-if="comment.user.profile_pic_url">
+      <span>Comment #{{ $index + 1 }}</span>
+      <div class="col-xs-4 col-sm-3 col-md-2">
+        <p>{{ comment.user.username }}</p>
+        <img ng-src="{{ comment.user.profile_pic_url }}" ng-if="comment.user.profile_pic_url"><br>
+        <p>Karma: {{ comment.user.karma }}</p>
       </div>
-      <div class="col-xs-10">
+      <div class="col-xs-8 col-sm-9 col-md-10">
         <img ng-src="{{ comment.image_src }}" ng-if="comment.image_src">
         <p>{{ comment.body }}</p>
       </div>
