--- a/src/js/views/topics/index.html
+++ b/src/js/views/topics/index.html
@@ -1,7 +1,8 @@
 <ul class="row">
   <li ng-repeat="topic in topicsIndex.all" class="col-md-4 col-sm-6">
-    <h1><a ui-sref="topicsShow({id: topic.id })">{{ topic.title }}</a></h1>
+    <h1><a ui-sref="topicsShow({id: topic.id, page: 1 })">{{ topic.title }}</a></h1>
     <h3 ng-if="topic.subtitles.length">{{ topic.selected_subtitle }}</h3>
-    <h4>{{ topic.tweet_volume }} tweets</h4>
+    <h4>{{ topic.comments.length }} Comments</h4>
+    <h4>{{ topic.tweet_volume | number }} Tweets</h4>
   </li>
 </ul>
