really spruced up styling

--- a/src/js/views/static/404.html
+++ b/src/js/views/static/404.html
@@ -1,3 +1,6 @@
+<div class="container">
+
 <h1>WOAH WOAH WOAH, WHERE YOU GOIN BUDDY?! YOU GOIN BACK IN 5 SECONDS SON</h1>
 
 <a ui-sref="home">Or click here to go now</a>
+</div>
