--- a/src/js/views/topics/index.html
+++ b/src/js/views/topics/index.html
@@ -1,3 +1,5 @@
+<div class="container">
+
 <ul class="row">
   <li ng-repeat="topic in topicsIndex.all" class="col-md-4 col-sm-6">
     <h1><a ui-sref="topicsShow({id: topic.id, page: 1 })">{{ topic.title }}</a></h1>
@@ -6,3 +8,6 @@
     <h4>{{ topic.tweet_volume | number }} Tweets</h4>
   </li>
 </ul>
+</div>
+
+  <p ng-repeat="tweet in topicsIndex.tweets">{{ tweet }}</p>
