--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,6 +17,7 @@ $twitter: #419BF9;
 
 * {
   box-sizing: border-box;
+  transition: text-shadow, .3s;
 }
 
 body, html {
@@ -28,6 +29,12 @@ li {
   list-style: none;
   a {
     display: inline;
+  }
+}
+
+a {
+  &:link, &:visited, &:hover, &:active {
+    text-decoration: none;
   }
 }
 
@@ -44,14 +51,94 @@ ul {
 
 nav {
   background-color: $twitter;
-  height: 50px;
-  padding: 10px;
+  height: 65px;
+  padding: 17px;
+  .logo {
+    background-color: white;
+    color: $twitter;
+    padding: 0 6px;
+    padding-top: 2px;
+    font-size: 20px;
+    border-radius: 1px;
+  }
   li {
     display: inline-block;
     margin-left: 20px;
     font-size: 16px;
+    &:nth-child(2) {
+      font-size: 20px;
+    }
+    &:nth-child(3), &:nth-child(4), &:nth-child(5) {
+      float: right;
+      margin-right: 10px;
+    }
     a {
       color: white;
+      &.active {
+        text-shadow:0 0 4px rgba(255,255,255, 0.6);
+      }
+      &:link, &:hover, &:visited {
+        color: white;
+      }
+      &.logo {
+        &:visited {
+          color: $twitter;
+        }
+      }
+    }
+  }
+}
+
+.profile {
+  background-color: rgba(0,0,0,0.035);
+  margin-top: 0;
+  text-align: center;
+  height: 100vh;
+  padding-right: 0px;
+  padding-left: 0px;
+  h1, h2 {
+    color: $twitter;
+  }
+  img {
+    max-height: 160px;
+    max-width: 160px;
+    border-radius: 50%;
+    border: 2px solid rgba(0,0,255,0.4);
+  }
+  .profile-options {
+    margin-top: 50px;
+    margin-bottom: 10px;
+    a {
+      font-size: 18px;
+      padding: 10px;
+      color: darken($twitter, 5%);
+      &:first-of-type {
+        border-top-left-radius: 10px;
+      }
+      &:last-of-type {
+        border-top-right-radius: 10px;
+      }
+      &.active {
+        font-size: 20px;
+        color: white;
+        background-color: $twitter;
+      }
+    }
+  }
+  .profile-wrapper {
+    background-color: $twitter;
+    min-height: 400px;
+    padding: 30px;
+    width: 100%;
+    section {
+      color: white;
+      label {
+        color: white;
+        background-color: inherit;
+        &:hover {
+          cursor: pointer;
+        }
+      }
     }
   }
 }
@@ -80,6 +167,11 @@ nav {
     color: white;
 }
 
+.base64:focus + label {
+  outline: 1px dotted #000;
+  outline: -webkit-focus-ring-color auto 5px;
+}
+
 .subtitle-submit {
   border: 0px;
   background-color: inherit;
@@ -96,7 +188,6 @@ nav {
     padding: 30px 25px;
     padding-right: 5px;
     padding-bottom: 0px;
-
     h2 {
       margin-top: 0;
       color: $twitter;
@@ -112,7 +203,6 @@ nav {
       padding-left: 4px;
     }
   }
-
   .topic-header-right {
     height: 200px;
     padding: 30px 25px;
@@ -124,8 +214,17 @@ nav {
       @extend .removeButtonStyling;
       background-color: $twitter;
       color: white;
+      border: 2px solid $twitter;
       font-size: 18px;
       padding: 15px 30px;
+      position: absolute;
+      bottom: 10px;
+      left: 25%;
+      &:hover {
+        border-radius: 2px;
+        color: $twitter;
+        background-color: white;
+      }
     }
   }
 }
@@ -226,7 +325,7 @@ nav {
 
 .topic-footer {
   height: 100px;
-  background-color: rgba(0,0,0,0.03);
+  background-color: rgba(0,0,0,0.04);
   margin-top: 40px;
   padding-top: 30px;
   text-align: center;
@@ -245,4 +344,39 @@ nav {
       }
     }
   }
+}
+
+
+@media only screen and (max-width : 992px) {
+  .topic-header {
+    .topic-header-left {
+      h2 {
+        font-size: 35px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width : 768px) {
+  .topic-header {
+    .topic-header-left {
+      h2 {
+        font-size: 4vw;
+      }
+      h5 {
+        font-size: 2vw;
+      }
+    }
+    .topic-header-right {
+      padding: 0;
+      button {
+        width: 100%;
+        left: 0;
+        &:focus {
+          color: orange;
+        }
+      }
+    }
+  }
+
 }
