--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,7 +17,7 @@ $twitter: #419BF9;
 
 * {
   box-sizing: border-box;
-  transition: text-shadow, .3s;
+  transition-duration: .15s;
 }
 
 body, html {
@@ -49,6 +49,13 @@ ul {
   height: 100vh;
 }
 
+.message {
+  background-color: darken(#eb636a, 10%);
+  border: 2px solid #eb636a;
+  color: lighten(#eb626a, 10%);
+  height: 40px;
+  padding: 10px;
+}
 nav {
   background-color: $twitter;
   height: 65px;
@@ -131,12 +138,41 @@ nav {
     padding: 30px;
     width: 100%;
     section {
-      color: white;
+      text-align: center;
+      input {
+        border-radius: 1px;
+        border: 1px solid rgba(0,0,0,0.2);
+        font-family: 'Lato', serif;
+        width: 80%;
+        padding: 5px;
+        padding-left: 10px;
+      }
+      textarea {
+        font-family: 'Lato', serif;
+        width: 80%;
+        border: 1px solid rgba(0,0,0,0.2);
+        padding: 10px;
+        resize: none;
+        height: 150px;
+      }
       label {
         color: white;
-        background-color: inherit;
+        padding: 10px;
+      }
+      h4 {
+        color: white;
+      }
+      button {
+        border: 2px solid white;
+        background-color: $twitter;
+        color: white;
+        font-size: 16px;
+        padding: 10px;
+        border-radius: 1px;
+        margin-top: 10px;
         &:hover {
-          cursor: pointer;
+          color: $twitter;
+          background-color: white;
         }
       }
     }
@@ -201,25 +237,25 @@ nav {
       width: 220px;
       padding: 2px;
       padding-left: 4px;
+      font-family: 'Lato', serif;
     }
   }
   .topic-header-right {
     height: 200px;
     padding: 30px 25px;
-    text-align: center;
     div {
-      height: 50%;
+      height: 50%; // I dont know what this does, but it works.?!
     }
+    text-align: center;
     button {
       @extend .removeButtonStyling;
       background-color: $twitter;
-      color: white;
       border: 2px solid $twitter;
+      color: white;
       font-size: 18px;
       padding: 15px 30px;
-      position: absolute;
       bottom: 10px;
-      left: 25%;
+      border-radius: 1px;
       &:hover {
         border-radius: 2px;
         color: $twitter;
@@ -230,26 +266,51 @@ nav {
 }
 
 .comment-form {
+  padding: 20px;
   textarea {
+    height: 180px;
+    border: 1px solid rgba(0,0,0,0.24);
+    resize: none;
     width: 100%;
-    height: 120px;
+    font-family: 'Lato', serif;
   }
   button {
-    border: 0px;
     background-color: $twitter;
     color: white;
     padding: 10px;
     width: 120px;
+    height: 50px;
     transition: background-color, .2s;
-    &:hover {
-      background-color: lighten($twitter, 7.5%);
+    &:last-child {
+      float: right;
+      font-size: 16px;
+      border: 2px solid $twitter;
+      &:hover {
+        color: $twitter;
+        background-color: white;
+        border-radius: 1px;
+      }
+    }
+  }
+  label {
+    border: 2px solid white;
+    color: $twitter;
+    &:first-child {
+      color: black;
+    }
+    &#image {
+      &:hover {
+        border: 2px solid $twitter;
+        background-color: white;
+        color: $twitter;
+      }
     }
   }
 }
 
 .comments {
   border-radius: 2px;
-  min-height: 270px;
+  min-height: 300px;
   background-color: rgba(0,0,0,0.045);
   position: relative;
   .comment-bar { // Top of comment, shows comment number
@@ -273,7 +334,7 @@ nav {
     font-weight: bold;
     font-size: 18px;
     padding: 6px;
-    height: 239px;
+    height: 269px;
     border-right: 1px solid rgba(0,0,0,0.2);
     padding-left: 15px;
     img {
@@ -291,8 +352,10 @@ nav {
       bottom: 0;
       border-right: 0px;
       border-top: 1px solid rgba(0,0,0,0.1);
-      padding: 15px;
-      height: 65px;
+      padding: 10px;
+      padding-top: 20px;
+      padding-right: 0px;
+      height: 75px;
       ul {
         li {
           display: inline-block;
@@ -301,7 +364,7 @@ nav {
           &:nth-child(4), &:nth-child(5) {
             float: right;
           }
-          a {
+          a:first-child {
             color: $twitter;
             &:hover {
               color: darken($twitter, 15%);
@@ -309,7 +372,18 @@ nav {
           }
           button {
             @extend .removeButtonStyling;
-            color: $twitter;
+            &#upvote {
+              color: #b1d330;
+              &:hover {
+                color: darken(#b1d330, 10%);
+              }
+            }
+            &#downvote {
+              color: #eb636a;
+              &:hover {
+                color: darken(#eb636a, 10%);
+              }
+            }
           }
         }
       }
@@ -321,6 +395,14 @@ nav {
     float: left;
     margin-right: 10px;
   }
+}
+
+.subtitle-voting {
+  min-height: 200px;
+  background-color: rgba(0,0,0,0.045);
+  margin-bottom: 20px;
+  padding: 30px;
+  font-size: 18px;
 }
 
 .topic-footer {
@@ -378,5 +460,11 @@ nav {
       }
     }
   }
-
+  .comment-footer {
+    ul {
+      li {
+        font-size: 14px;
+      }
+    }
+  }
 }
