cleaned up auth pages, working on topics:

--- a/src/js/views/profile/edit.html
+++ b/src/js/views/profile/edit.html
@@ -1,6 +1,6 @@
 <div class="">
   <form ng-submit="profile.edit()">
-    <div class="form-group">
+    <div>
       <input type="file" base64 name="base64" id="base64" class="base64" ng-model="profile.user.base64">
       <label label for="base64">Image</label>
     </div>
