--- a/src/js/views/profile/inbox.html
+++ b/src/js/views/profile/inbox.html
@@ -1,3 +1,12 @@
 <div>
-  Inbpx
+  <div class="row">
+    <div class="col-sm-6">
+      <h1>Messages Received</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-6">
+      <h1>Messages Sent</h1>
+    </div>
+  </div>
 </div>
