--- a/src/js/views/auth/login.html
+++ b/src/js/views/auth/login.html
@@ -1,14 +1,16 @@
-<h1>Login</h1>
-  <form ng-submit="auth.login()">
-    <div>
-      <label>Email</label>
-      <input type="text" ng-model="auth.credentials.email">
-    </div>
+<div class="auth">
+  <h1>Login</h1>
+    <form ng-submit="auth.login()">
+      <div>
+        <label>Email</label>
+        <input type="text" ng-model="auth.credentials.email">
+      </div>
 
-    <div>
-      <label>Password</label>
-      <input type="password" ng-model="auth.credentials.password">
-    </div>
+      <div>
+        <label>Password</label>
+        <input type="password" ng-model="auth.credentials.password">
+      </div>
 
-    <button>Login</button>
-</form>
+      <button>Submit</button>
+  </form>
+</div>
