--- a/src/js/views/auth/register.html
+++ b/src/js/views/auth/register.html
@@ -1,4 +1,5 @@
-<h1>Register</h1>
+<div class="auth">
+<h1>Registration</h1>
   <form ng-submit="auth.register()">
     <div>
       <label>Username</label>
@@ -20,5 +21,6 @@
       <input type="password" ng-model="auth.user.password_confirmation">
     </div>
 
-    <button>Register</button>
-</form>
+    <button>Create Account</button>
+  </form>
+</div>
