--- a/src/js/views/static/404.html
+++ b/src/js/views/static/404.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-<h1>Goodbye WDI-25, I just have to say that I hate you all and always have hated you. The truth is that I have a special place in my heart for Ajay and all anyone does in this damn establishment is steal his attention away from me. I'm really shy, so approaching him is difficult for me, but assholes like Olivia and Sam are trying their hardest to keep him away from me. Jokes on them, I plan to steal Ajay for good with one simple trick. Its a secret though, can't be giving away my secrets now can I. There is so much text on the screen, nobody will notice I'm gay. Forreal tho, it has been absolutely great, thank you all for being amazing people (except Jake) and for making this experience more enjoyable than I could have imagined. This part probably wont get read so no worries, tbh I could write whatever I want. I already am anyway. Hmm. 'Bawler', 'LOLOLOLOL', seriously Mike? Thats like, so 2012 dude, like, seriously. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
+  <h1>Silly page for silly things, so how did you get here?</h1>
 
-<a ui-sref="home">Or click here to go now</a>
+  <a ui-sref="home">Or click here to go now</a>
 </div>
