--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -46,7 +46,7 @@ ul {
   background-image: linear-gradient(rgba(0, 0, 50, 0.2), rgba(0, 0, 50, 0.2)), url('/images/hero.jpg');
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  height: calc(100vh - 65px);
 }
 
 .message {
@@ -56,6 +56,7 @@ ul {
   height: 40px;
   padding: 10px;
 }
+
 nav {
   background-color: $twitter;
   height: 65px;
@@ -92,6 +93,39 @@ nav {
           color: $twitter;
         }
       }
+    }
+  }
+}
+
+.auth {
+  min-width: 300px;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: rgba(0,0,0,0.035);
+  text-align: center;
+  margin-top: 16px;
+  label {
+    display: block;
+    padding: 3px;
+  }
+  input {
+    padding: 3px;
+    margin-bottom: 8px;
+  }
+  h1 {
+    color: $twitter;
+    margin-bottom: 20px;
+  }
+  button {
+    @extend .removeButtonStyling;
+
+    padding: 12px 15px;
+    font-size: 20px;
+    margin-top: 20px;
+    &:hover {
+      color: $twitter;
+
     }
   }
 }
@@ -215,6 +249,7 @@ nav {
   font-size: 16px;
 }
 
+
 .topic-header {
   margin-top: 20px;
   margin-bottom: 20px;
@@ -273,6 +308,7 @@ nav {
     resize: none;
     width: 100%;
     font-family: 'Lato', serif;
+    padding: 5px;
   }
   button {
     background-color: $twitter;
@@ -337,9 +373,15 @@ nav {
     height: 269px;
     border-right: 1px solid rgba(0,0,0,0.2);
     padding-left: 15px;
+    padding-top: 15px;
     img {
+      text-align: center;
       max-height: 130px;
       border-radius: 1px;
+    }
+    .karma {
+      position: absolute;
+      bottom: 15px;
     }
   }
   div:last-of-type {
@@ -361,7 +403,7 @@ nav {
           display: inline-block;
           margin-right: 10px;
           font-family: 'Poppins', serif;
-          &:nth-child(4), &:nth-child(5) {
+          &:nth-child(3), &:nth-child(4) {
             float: right;
           }
           a:first-child {
