--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,5 @@
 $twitter: #419BF9;
+$green: #b1d330;
 
 @font-face {
   font-family: 'Poppins';
@@ -8,6 +9,11 @@ $twitter: #419BF9;
 @font-face {
   font-family: 'Lato';
   src: url('/fonts/Lato/Lato-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Poppins-Semi';
+  src: url('/fonts/Poppins/Poppins-SemiBold.ttf') format('truetype');
 }
 
 .removeButtonStyling {
@@ -24,14 +30,15 @@ body, html {
   height: 100%;
   font-family: 'Poppins', serif;
 }
-
-li {
-  list-style: none;
-  a {
-    display: inline;
+ul {
+  margin-bottom: 0px;
+  li {
+    list-style: none;
+    a {
+      display: inline;
+    }
   }
 }
-
 a {
   &:link, &:visited, &:hover, &:active {
     text-decoration: none;
@@ -40,6 +47,10 @@ a {
 
 ul {
   padding-left: 0px;
+}
+
+.poppins-semi {
+  font-family: 'Poppins-Semi', serif;
 }
 
 .hero {
@@ -112,6 +123,7 @@ nav {
   input {
     padding: 3px;
     margin-bottom: 8px;
+    font-family: 'Lato', serif;
   }
   h1 {
     color: $twitter;
@@ -119,7 +131,6 @@ nav {
   }
   button {
     @extend .removeButtonStyling;
-
     padding: 12px 15px;
     font-size: 20px;
     margin-top: 20px;
@@ -141,18 +152,19 @@ nav {
     color: $twitter;
   }
   img {
-    max-height: 160px;
-    max-width: 160px;
+    max-height: 200px;
+    max-width: 200px;
     border-radius: 50%;
     border: 2px solid rgba(0,0,255,0.4);
   }
   .profile-options {
-    margin-top: 50px;
+    margin-top: 20px;
     margin-bottom: 10px;
     a {
       font-size: 18px;
       padding: 10px;
       color: darken($twitter, 5%);
+      border: 2px solid $twitter;
       &:first-of-type {
         border-top-left-radius: 10px;
       }
@@ -160,7 +172,6 @@ nav {
         border-top-right-radius: 10px;
       }
       &.active {
-        font-size: 20px;
         color: white;
         background-color: $twitter;
       }
@@ -192,6 +203,7 @@ nav {
       label {
         color: white;
         padding: 10px;
+        font-size: 18px;
       }
       h4 {
         color: white;
@@ -249,6 +261,25 @@ nav {
   font-size: 16px;
 }
 
+
+.topics-index {
+  min-height: 250px;
+  background-color: rgba(0,0,0,0.035);
+  a {
+    color: $twitter;
+    font-size: 40px;
+    &:hover {
+      color: darken($twitter, 15%);
+    }
+  }
+  h3 {
+    font-size: 24px;
+  }
+  h4 {
+    font-size: 20px;
+    font-family: 'Poppins-Semi', serif;
+  }
+}
 
 .topic-header {
   margin-top: 20px;
@@ -377,6 +408,7 @@ nav {
     img {
       text-align: center;
       max-height: 130px;
+      max-width: 130px;
       border-radius: 1px;
     }
     .karma {
@@ -403,21 +435,13 @@ nav {
           display: inline-block;
           margin-right: 10px;
           font-family: 'Poppins', serif;
-          &:nth-child(3), &:nth-child(4) {
-            float: right;
-          }
-          a:first-child {
-            color: $twitter;
-            &:hover {
-              color: darken($twitter, 15%);
-            }
-          }
+          float: right;
           button {
             @extend .removeButtonStyling;
             &#upvote {
-              color: #b1d330;
+              color: $green;
               &:hover {
-                color: darken(#b1d330, 10%);
+                color: darken($green, 10%);
               }
             }
             &#downvote {
@@ -445,6 +469,16 @@ nav {
   margin-bottom: 20px;
   padding: 30px;
   font-size: 18px;
+  button {
+    @extend .removeButtonStyling;
+    color: $twitter;
+    height: 150px;
+    width: 100%;
+    font-size: 26px;
+    &:hover {
+      color: $green;
+    }
+  }
 }
 
 .topic-footer {
@@ -462,21 +496,92 @@ nav {
       a {
         color: $twitter;
       }
-      button {
-        @extend .removeButtonStyling;
-
-      }
     }
   }
 }
 
+.inbox {
+  h1 {
+    color: white;
+  }
+  color: white;
+  margin: 0;
+  p {
+    font-size: 16px;
+    font-family: 'Lato', serif;
+  }
+  img {
+    max-height: 100px;
+    max-width: 100px;
+  }
+}
+
+.private-message {
+  p {
+    color: white;
+    margin-top: 20px;
+    font-size: 10px;
+    img {
+      max-width: 200px;
+      max-height: 200px;
+    }
+  }
+  #message-img {
+    color: white;
+    background-color: inherit;
+    border: 1px solid $twitter;
+    &:hover {
+      color: $green;
+    }
+  }
+}
+
+.profile-edit {
+  #image {
+    border: 2px solid white;
+    background-color: inherit;
+    color: white;
+    &:hover {
+      color: $green;
+    }
+  }
+}
+
+.profile-not-picked {
+  color: white;
+  position: relative;
+  top: 100px;
+  font-size: 30px;
+}
 
 @media only screen and (max-width : 992px) {
+  .topics-index {
+    h2 {
+      margin-top: 0;
+      padding-top: 10px;
+    }
+    a {
+      font-size: 34px;
+    }
+    h3 {
+      font-size: 22px;
+    }
+    h4 {
+      font-size: 18px;
+    }
+  }
   .topic-header {
     .topic-header-left {
       h2 {
         font-size: 35px;
       }
+      h5 {
+        font-family: 'Poppins-Semi', serif;
+        font-size: 16px;
+      }
+    }
+    .topic-header-right {
+      padding: 20px;
     }
   }
 }
@@ -484,15 +589,20 @@ nav {
 @media only screen and (max-width : 768px) {
   .topic-header {
     .topic-header-left {
+      padding-left: 10px;
       h2 {
-        font-size: 4vw;
+        font-size: 20px;
       }
       h5 {
         font-size: 2vw;
+        font-family: 'Poppins-Semi', serif;
       }
     }
     .topic-header-right {
       padding: 0;
+      .comment-buttons {
+        padding: 0px;
+      }
       button {
         width: 100%;
         left: 0;
